# tracing

./: docker-compose.yaml  simulate.py  users.json
.github/workflows/: build.yaml
alloy/: config.alloy
grafana/provisioning/datasources/: loki.yaml  tempo.yaml
loki/: config.yaml
service/: Dockerfile  pyproject.toml  schemas.py  simulate.py
service/src/: config.py  database.py  logger.py  main.py  models.py  tracing.py
service/src/routes/: todo.py  user.py
